# vigil

./: .gitignore  README.md  env.example  pyproject.toml
backend/: env.example
backend/api/: api_endpoint.py  classifier.py  collector.py  database.py  emailer.py  grokmoment.py  subscriptions.py  timestamps.py  vigil.db
backend/api/data/: patterns.json
backend/dummy-logs/: README.md  claude_generate_logs.py
docs/: architecture-qa.md  constraints.md  deployment-guide.md
docs/superpowers/plans/: 2026-04-06-settings-page.md
docs/superpowers/specs/: 2026-04-06-settings-page-design.md
dummy-site/: README.md  app.py  config.py  simulate.py
dummy-site/static/: style.css
dummy-site/templates/: admin.html  base.html  dashboard.html  error.html  index.html  login.html
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  siem.module.css
frontend/app/alerts/: page.tsx
frontend/app/components/: FileUpload.tsx  LogOutput.tsx  Sidebar.tsx  Toast.tsx  VoiceAgent.tsx  VoiceAgentWrapper.tsx
frontend/app/contexts/: SettingsContext.tsx
frontend/app/dashboard/: page.tsx
frontend/app/events/: page.tsx
frontend/app/health/: page.tsx
frontend/app/hooks/: useCollectorStream.ts
frontend/app/lib/: logDisplay.ts  streamEvents.ts
frontend/app/settings/: page.tsx
frontend/types/: logs.ts
vigil/: env.example
vigil/backend/api/: README.md  __init__.py  api-endpoint.py  api_endpoint.py  collector.py  vigil.db  (+5 more)
vigil/docs/: architecture-qa.md
vigil/frontend/: README.md  package-lock.json  package.json
(+30 files in other folders)
