[project]
name = "project-vigil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "openai>=2.26.0",
    "pygrok>=1.0.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.43.0",
    "watchdog>=4.0.0",
]

[dependency-groups]
dev = ["uv-script>=0.1.9"]

[tool.uvs.scripts]
dev = "python -m uvicorn api_endpoint:app --reload --host 127.0.0.1 --port 8000"
